force-app/main/default/objects/Ponderado_De_Calificacion__mdt/Ponderado_De_Calificacion__mdt.object-meta.xml
<CustomObject>
    <label>Ponderado de calificacion</label>
    <pluralLabel>Ponderados de calificaciones</pluralLabel>
</CustomObject>