force-app/main/default/objects/Ponderado_De_Calificacion__mdt/fields/Criterio__c.field-meta.xml
<CustomField>
    <fullName>Criterio__c</fullName>
    <label>Criterio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Tipo Persona</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tipo Cliente</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Doc. Identidad</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Tipo Relacion</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Nivel Organizacional</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Profesion</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Ocupacion</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Actividad Economica</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Canal Contrata</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Sucursal</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Forma de pago</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Tipo de transacción</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Responsable del pago</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Origen de los fondo</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>País</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>