force-app/main/default/objects/Ponderado_De_Calificacion__mdt/fields/Juridicos__c.field-meta.xml
<CustomField>
    <fullName>Juridicos__c</fullName>
    <label>Juridicos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>