force-app/main/default/objects/Ponderado_De_Calificacion__mdt/fields/Naturales__c.field-meta.xml
<CustomField>
    <fullName>Naturales__c</fullName>
    <label>Naturales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>